fix: Add {% csrf_token %} to title_create.html, team_create.html, and game_create.html
In order to improve security, I added the {% csrf_token %} template tag to the following files: title_create.html, team_create.html, and game_create.html. This will prevent cross-site request forgery (CSRF) attacks on these pages.

--- a/templates/games/game_create.html
+++ b/templates/games/game_create.html
@@ -6,6 +6,7 @@
 <div class="form-container">
   <h1>Создать матч</h1>
   <form id="game-create-form">
+    {% csrf_token %}
     <div class="form-group">
       <label for="date-input">Дата матча</label>
       <input type="date" id="date-input" name="date_of_the_match" required />
