fix: add CSRF protection to title deletion and update title list template
In order to add CSRF protection to the delete functionality of titles, the JavaScript code in titles.js has been updated to include the CSRF token in the DELETE request header. Additionally, the title list template has been updated to include the {% csrf_token %} tag for CSRF protection.

--- a/templates/titles/titles_list.html
+++ b/templates/titles/titles_list.html
@@ -1,6 +1,5 @@
-{% extends 'base.html' %} {% load static %}
-{% block title %}Список титулов{%endblock %}
-{% block styles %}{{ block.super }}
+{% extends 'base.html' %} {% load static %} {% block title %}Список
+титулов{%endblock %} {% block styles %}{{ block.super }}
 <link rel="stylesheet" type="text/css" href="{% static 'css/titles.css' %}" />
 {% endblock %} {% block content %}
 <h1>Список титулов</h1>
@@ -17,6 +16,7 @@
       <td>{{ title.name }}</td>
       <td>
         <a class="button" href="/titles/{{ title.id }}">Подробнее</a>
+        {% csrf_token %}
         <button class="button delete-button" data-title-id="{{ title.id }}">
           Удалить
         </button>
