refactor: game update functionality using jQuery
This commit refactors the game update functionality by replacing vanilla JavaScript with jQuery. The event listener for the form submission now uses jQuery's submit method instead of the addEventListener method. The form data is now collected using jQuery selectors instead of the FormData object. The Ajax request is also now made using jQuery's ajax method with the appropriate parameters, including the CSRF token. The success and failure handlers now use console.log and alert to provide feedback to the user.

--- a/templates/games/game.html
+++ b/templates/games/game.html
@@ -9,6 +9,7 @@
 <div class="grid-container">
   <h1 class="title">Подробная информация о матче</h1>
   <form id="game-form">
+    {% csrf_token %}
     <label for="date_of_the_match">Дата матча:</label>
     <input
       type="date"
