refactor: team form submission handling and update team page template.
Replace the previous form submission handling code with jQuery's $.ajax method, which sends an AJAX PUT request to the server. This approach is more flexible and allows us to customize the request headers and handle the server's response more easily.

In addition, modify the team page template to add the {% csrf_token %} template tag to the form, which is required to prevent Cross-Site Request Forgery (CSRF) attacks. Also, remove the script tag that loads the team.js file, which is no longer needed.

--- a/templates/teams/team.html
+++ b/templates/teams/team.html
@@ -2,10 +2,10 @@
 {% block title %}Команда{% endblock%}
 {% block styles %}{{ block.super }}
 <link rel="stylesheet" type="text/css" href="{% static 'css/team.css' %}" />
-<script src="{% static 'js/team.js' %}"></script>
 {% endblock %} {% block content %}
 <h1>Информация о команде</h1>
 <form id="team-form">
+  {% csrf_token %}
   <label for="name">Название команды:</label>
   <input type="text" id="name" name="name" value="{{ team.name }}" /><br />
 
@@ -47,14 +47,7 @@
         type="checkbox"
         name="titles"
         value="{{ title.id }}"
-        {%
-        if
-        title
-        in
-        team.titles.all
-        %}checked{%
-        endif
-        %}
+        {% if title in team.titles.all %}checked{% endif %}
       />
       {{ title.name }} </label
     ><br />
@@ -64,4 +57,5 @@
 
   <input type="submit" value="Сохранить" />
 </form>
-{% endblock %} {% block scripts %}{{ block.super }} {% endblock %}
+{% endblock %} {% block scripts %}
+{{ block.super }}<script src="{% static 'js/team.js' %}"></script> {% endblock %}
