--- a/templates/chat.html
+++ b/templates/chat.html
@@ -14,6 +14,7 @@
     </div>
     <div class="input-container">
       <input id="message-input" type="text" placeholder="Напечатайте своё сообщение тут...">
+      {% csrf_token %}
       <button id="send-button">Отправить</button>
       <input id="username" type="text" hidden value="{{ request.user.username }}">
     </div>
